# ERM

./: LICENSE  devbox.json
finance/: .gitignore  Cargo.toml  README.md  altas.hcl  diesel.toml  docker-compose.yaml  pyproject.toml  schema.sql
finance/client/: Cargo.toml  dockerfile
finance/client/src/: main.rs
finance/docs/: erm.md
finance/migrations/2025-03-31-172838_create_posts/: down.sql  up.sql
finance/proto/: helloworld.proto  voting.proto
finance/server/: Cargo.toml  build.rs
finance/server/src/: main.rs
finance/src/: db.rs  main.rs  models.rs  schema.rs
finance/src/finance/: __init__.py  main.py
finance/src/ops/: user_ops.rs
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/components/: test.vue
frontend/components/finance/: main_menu.vue
frontend/components/finance/main-menu/: gauge-risk.vue  history-risk.vue
frontend/layouts/: default.vue
frontend/pages/: about.vue  index.vue
frontend/pages/finance/: balances.vue  budgets.vue  index.vue  ledger.vue  regulations.vue  stock.vue  tracking.vue  transactions.vue
